force-app/main/default/objects/NICC_Risk__c/NICC_Risk__c.object-meta.xml
<CustomObject>
    <label>NICC Risk</label>
    <nameField>
        <displayFormat>NIRSK{000000}</displayFormat>
        <label>NICC Risk Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NICC Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>