force-app/main/default/objects/NICC_Risk__c/fields/Level1Value__c.field-meta.xml
<CustomField>
    <fullName>Level1Value__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Level 1 Value</label>
    <type>Checkbox</type>
</CustomField>