force-app/main/default/objects/NICC_Risk__c/fields/Level3Value__c.field-meta.xml
<CustomField>
    <fullName>Level3Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level 3 Value</label>
    <type>Checkbox</type>
</CustomField>