force-app/main/default/objects/NICC_Risk__c/fields/Level4Value__c.field-meta.xml
<CustomField>
    <fullName>Level4Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level 4 Value</label>
    <type>Checkbox</type>
</CustomField>