force-app/main/default/objects/NICC_Risk__c/fields/NICC_ID__c.field-meta.xml
<CustomField>
    <fullName>NICC_ID__c</fullName>
    <label>NI Change Control</label>
    <referenceTo>NI_Change_Control__c</referenceTo>
    <relationshipLabel>Risk Assessment</relationshipLabel>
    <relationshipName>NICC_Risks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>