force-app/main/default/objects/NICC_Risk__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>